--- a/game/CmakeLists.txt
+++ b/game/CmakeLists.txt
@@ -1,5 +1,6 @@
 # game/CMakeLists.txt
 
-add_executable(YourGame src/main.cpp)
-target_include_directories(YourGame PUBLIC ../include)
-target_link_libraries(YourGame engine ui)
+add_executable(Influence src/main.cpp)
+target_include_directories(Influence PUBLIC ../include)
+target_link_libraries(Influence sfml-graphics)
+target_link_libraries(Influence engine ui)
